kubernetes/working-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-app
  labels:
    app: welcome-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: welcome-app
  template:
    metadata:
      labels:
        app: welcome-app
    spec:
      volumes:
        - name: welcome-app-config
          configMap:
            name: welcome-app-config
      containers:
        - name: welcome-app
          image: ghcr.io/fiqrimaulanaar/testing/welcome:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: welcome-app-config
              mountPath: /app/config
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-app-service

spec:
  selector:
    app: welcome-app
  ports:
    - port: 8000
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: tls-letsencrypt

spec:
  tls:
    - hosts:
        - welcome-app.localhost # ganti dengan domain yang valid
      secretName: tls-letsencrypt
  rules:
    - host: welcome-app.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-app-service
                port:
                  number: 8000
